date filtering implemented
